@@ -1403,23 +1403,15 @@ name|NEW
 argument_list|,
 name|RMAppState
 operator|.
-name|FINAL_SAVING
+name|KILLED
 argument_list|,
 name|RMAppEventType
 operator|.
 name|KILL
 argument_list|,
 operator|new
-name|FinalSavingTransition
-argument_list|(
-operator|new
 name|AppKilledTransition
 argument_list|()
-argument_list|,
-name|RMAppState
-operator|.
-name|KILLED
-argument_list|)
 argument_list|)
 operator|.
 name|addTransition
@@ -1430,23 +1422,15 @@ name|NEW
 argument_list|,
 name|RMAppState
 operator|.
-name|FINAL_SAVING
+name|FAILED
 argument_list|,
 name|RMAppEventType
 operator|.
 name|APP_REJECTED
 argument_list|,
 operator|new
-name|FinalSavingTransition
-argument_list|(
-operator|new
 name|AppRejectedTransition
 argument_list|()
-argument_list|,
-name|RMAppState
-operator|.
-name|FAILED
-argument_list|)
 argument_list|)
 comment|// Transitions from NEW_SAVING state
 operator|.
